--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -372,7 +372,26 @@ mim18 <- tsize.raw[[grep("mimic18", names(tsize.raw))]] %>%
          experiment = "mimic18") %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
 
+mim19 <- tsize.raw[[grep("mimic19", names(tsize.raw))]] %>%
+  drop_na(`tumor.width.(mm)`) %>%
+  filter(`tumor.width.(mm)` != "n/a") %>%
+  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+         `date` = as.character(`date`),
+         Treatment = ifelse(cage %in% c(3,4,7,8), "Anti-PD1","IgG"),
+         microbiome.sample = ifelse(cage %in% c(1,2,3,4), "HONC60-85v1 + Blautia", "HONC60-85v1"),
+         treatment.group = paste(Treatment, microbiome.sample, sep = " x "),
+         tail.number = paste(tail.number, cage, sep = " x ")) %>%
+  calcTumorVol(., as.POSIXct("2023-07-06")) %>%
+  separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
+  mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
+         experiment = "mimic19") %>%
+  separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
+
 ```
+
+
+
 
 ```{r}
 # mim16 <- 
@@ -401,14 +420,15 @@ mimic.cleaned <- mim1 %>%
   bind_rows(mim6) %>%
   bind_rows(mim7) %>%
   bind_rows(mim8) %>%
-  # bind_rows(mim9) %>% # mimic9 is missing from the input files
+  bind_rows(mim9) %>% 
   bind_rows(mim10) %>%
   bind_rows(mim11) %>%
   bind_rows(mim12) %>%
   bind_rows(mim13) %>%
   bind_rows(mim16) %>%
   bind_rows(mim17) %>%
-  bind_rows(mim18)
+  bind_rows(mim18) %>%
+  bind_rows(mim19)
 ```
 
 # Save
