start processing m19-21 (and give up)

--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -31,7 +31,6 @@ library(tidyverse)
 Read in all tumor size measurements
  
 ```{r AP Data Read Test Code}
-<<<<<<< Updated upstream
 tsize.files <- list.files("../data/tumor-size", 
                           pattern = "AOT", 
                           full.names = TRUE,
@@ -53,28 +52,18 @@ Read in files to list
 
 tsize.raw <- lapply(tsize.files, read_xlsx)
 names(tsize.raw) <- tsize.files
+
+head(tsize.raw)
 ```
 
 
 Read in a separate table of the injection dates for each experiment, to be used as the zero time point. 
 
 ```{r}
-# tsize.files <- c(tsize.files[3:10], tsize.files[1])
-# tsize.file.2 <- unlist(lapply(tsize.files, function(x) list.files(x, pattern = "_size")))
-# 
-# tsize.raw <- lapply(1:13, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
-
 inject.dates <- read_xlsx("../data/mimic_injection_dates.xlsx")
-=======
-tsize.files <- list.files(file.path(paths$git, 'data','tumor-size'), pattern = "AOT", full.names = T, recursive = TRUE)
-# tsize.files <- c(tsize.files[3:10], tsize.files[1])
 
-
-tsize.raw <- lapply(tsize.files, readxl::read_xlsx)
-
-inject.dates <- read_excel(file.path(paths$onedrive, "data", "mimic_injection_dates.xlsx"))
->>>>>>> Stashed changes
-
+head(inject.dates)
+tail(inject.dates)
 ```
 
 # Functions
@@ -320,7 +309,7 @@ mim13 <- tsize.raw[[grep("mimic13", names(tsize.raw))]] %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ") %>%
   mutate(treatment = ifelse(grepl("3 x 3", unique.mouse.id), "Anti-PD1", treatment))
 
-<<<<<<< Updated upstream
+
 mim16 <- tsize.raw[[grep("mimic16", names(tsize.raw))]] %>%
   drop_na(`tumor.width.(mm)`) %>%
    mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
@@ -400,6 +389,27 @@ mim19 <- tsize.raw[[grep("mimic19", names(tsize.raw))]] %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
 
 ```
+# Mimic 20
+mc38 tumors in C57BL6 mice gavaged with PBS or PBS + 1e7 Blautia massiliensis 
+
+```{r}
+mim20 <- tsize.raw[[grep("mimic20", names(tsize.raw))]] %>%
+  drop_na(`tumor.width.(mm)`) %>%
+  filter(`tumor.width.(mm)` != "n/a") %>%
+  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+         `date` = as.character(`date`))
+
+         # Treatment = ifelse(cage %in% c(3,4,7,8), "Anti-PD1","IgG"),
+         # microbiome.sample = ifelse(cage %in% c(1,2,3,4), "HONC60-85v1 + Blautia", "HONC60-85v1"),
+         # treatment.group = paste(Treatment, microbiome.sample, sep = " x "),
+         # tail.number = paste(tail.number, cage, sep = " x ")) %>%
+  calcTumorVol(., as.POSIXct("2023-07-06")) %>%
+  separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
+  mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
+         experiment = "mimic19") %>%
+  separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
+```
 
 
 
@@ -416,20 +426,20 @@ mim19 <- tsize.raw[[grep("mimic19", names(tsize.raw))]] %>%
 #   mutate(Treatment = ifelse(cage %in% c(1,2), "Anti-PD1","IgG"),
 #          treatment.group = paste(Treatment, microbiome.sample, sep = " x "),
 #          tail.number = paste(tail.number, cage, sep = " x ")) %>% 
-=======
-mim16 <- 
-  tsize.raw[[16]] %>%
-  drop_na(`tumor.length.(mm)`) %>%
-  mutate(cage = as.numeric(cage)) %>%
-  mutate(gavage = if_else(grepl("1|3", cage),
-                          true = "HONC60-85v1 + Blautia",
-                          false = "HONC60-85v1")) %>%
-    mutate(tx = if_else(grepl("3|4", cage),
-                          true = "IgG",
-                          false = "Anti-PD1")) %>%
-   calcTumorVol(., as.POSIXct("2023-02-01"))
 
->>>>>>> Stashed changes
+# mim16 <- 
+#   tsize.raw[[16]] %>%
+#   drop_na(`tumor.length.(mm)`) %>%
+#   mutate(cage = as.numeric(cage)) %>%
+#   mutate(gavage = if_else(grepl("1|3", cage),
+#                           true = "HONC60-85v1 + Blautia",
+#                           false = "HONC60-85v1")) %>%
+#     mutate(tx = if_else(grepl("3|4", cage),
+#                           true = "IgG",
+#                           false = "Anti-PD1")) %>%
+#    calcTumorVol(., as.POSIXct("2023-02-01"))
+# 
+
 ```
 
 
