--- a/scripts/Mimic 10 Tumor vs. Time.rmd
+++ b/scripts/Mimic 10 Tumor vs. Time.rmd
@@ -13,11 +13,33 @@ library(readxl)
 
 ```{r Data Entry and Cleanup}
 
-processed.data <- read.csv("../data/2022-06-28_tumor-size_R-formatted.csv") 
+processed.data <- read.csv("../data/2023-03-05_tumor-size_R-formatted.csv") %>%
+  mutate(gavage = if_else(grepl("v1|v3", microbiome.sample),
+                          true = "Pre-BRB",
+                          false = if_else(grepl("v2|v4", microbiome.sample),
+                                          true = "Post-BRB",
+                                          false = "other"))) %>%
+  mutate(gavage = fct_relevel(gavage, "Pre-BRB"))
 
 mim10.processed <-
   processed.data %>%
   filter(experiment == "mimic10") %>%
+  mutate(treatment.group = paste(treatment, microbiome.sample, sep = " x "))
+
+mim11.processed <-
+  processed.data %>%
+  filter(experiment == "mimic11") %>%
+  mutate(treatment.group = paste(treatment, microbiome.sample, sep = " x ")) %>%
+  mutate( gavage = if_else(grepl("v2", microbiome.sample),
+                          true = "Post-Placebo",
+                          false = "Post-BRB"))
+mim12.processed <-
+  processed.data %>%
+  filter(experiment == "mimic12") %>%
+  mutate(treatment.group = paste(treatment, microbiome.sample, sep = " x "))
+mim13.processed <-
+  processed.data %>%
+  filter(experiment == "mimic13") %>%
   mutate(treatment.group = paste(treatment, microbiome.sample, sep = " x "))
 
 ```
@@ -103,5 +125,132 @@ ggsave("../figures/ACC22_tumorvolume_mimic10_lineplot.png",
        height = 4, width = 6)
 
 
+```
+
+```{r mimic11}
+mean.mimic11 <-
+  mim11.processed %>%
+  group_by(treatment.group, days.from.injection) %>%
+  summarize(mean = mean(tumor.volume),
+            sd = sd(tumor.volume)) %>%
+  ungroup() %>%
+  mutate(lwr = mean - sd,
+         upr = mean + sd) %>%
+  mutate(lwr = if_else(lwr < 0, 0, lwr))
+
+mean.mimic11 %>%
+  mutate(Gavage = if_else(grepl("v2", treatment.group),
+                          true = "Post-Placebo",
+                          false = "Post-BRB"),
+         Treatment = if_else(grepl("Anti", treatment.group),
+                             true = "Anti-PD1",
+                             false = "IgG")) %>%
+  mutate(Gavage = fct_relevel(Gavage, c("Post-Placebo"))) %>%
+  ggplot(aes(x = days.from.injection, y = mean)) +
+  geom_line(aes(group = treatment.group,
+                color = Gavage,
+                linetype = Treatment), 
+            position = position_dodge(width = .5),
+            lwd = 1) + 
+  geom_point(aes(color = Gavage), 
+             position = position_dodge(width = .5))+
+  labs(x = "Days from Tumor Injection", 
+       y = expression("Tumor volume ("~mm^3~")"))  +
+  theme_bw(base_size = 18) +
+  scale_color_brewer(palette = "Set2") +
+  geom_errorbar(aes(ymin = lwr, 
+                    ymax = upr,
+                    color = Gavage),
+                width = 1,
+                position = position_dodge(width = .5),
+                lwd = 1)
+
+ggsave("../figures/tumorvolume_mimic11_lineplot.png", 
+       height = 4, width = 6)
+```
+
+```{r mimic12}
+mean.mimic12 <-
+  mim12.processed %>%
+  group_by(treatment.group, days.from.injection) %>%
+  summarize(mean = mean(tumor.volume),
+            sd = sd(tumor.volume)) %>%
+  ungroup() %>%
+  mutate(lwr = mean - sd,
+         upr = mean + sd) %>%
+  mutate(lwr = if_else(lwr < 0, 0, lwr))
+
+mean.mimic12 %>%
+  mutate(Gavage = if_else(grepl("v1", treatment.group),
+                          true = "Pre-BRB",
+                          false = "Post-BRB"),
+         Treatment = if_else(grepl("Anti", treatment.group),
+                             true = "Anti-PD1",
+                             false = "IgG")) %>%
+  mutate(Gavage = fct_relevel(Gavage, c("Pre-BRB"))) %>%
+  ggplot(aes(x = days.from.injection, y = mean)) +
+  geom_line(aes(group = treatment.group,
+                color = Gavage,
+                linetype = Treatment), 
+            position = position_dodge(width = .5),
+            lwd = 1) + 
+  geom_point(aes(color = Gavage), 
+             position = position_dodge(width = .5))+
+  labs(x = "Days from Tumor Injection", 
+       y = expression("Tumor volume ("~mm^3~")"))  +
+  theme_bw(base_size = 18) +
+  scale_colour_manual(values = brewer.pal(4, "Set1")[3:4]) +
+  geom_errorbar(aes(ymin = lwr, 
+                    ymax = upr,
+                    color = Gavage),
+                width = 1,
+                position = position_dodge(width = .5),
+                lwd = 1)
+
+ggsave("../figures/tumorvolume_mimic12_lineplot.png", 
+       height = 4, width = 6)
+```
+
+```{r mimic13}
+mean.mimic13 <-
+  mim13.processed %>%
+  group_by(treatment.group, days.from.injection) %>%
+  summarize(mean = mean(tumor.volume),
+            sd = sd(tumor.volume)) %>%
+  ungroup() %>%
+  mutate(lwr = mean - sd,
+         upr = mean + sd) %>%
+  mutate(lwr = if_else(lwr < 0, 0, lwr))
+
+mean.mimic13 %>%
+  mutate(Gavage = if_else(grepl("v3", treatment.group),
+                          true = "Pre-BRB",
+                          false = "Post-BRB"),
+         Treatment = if_else(grepl("Anti", treatment.group),
+                             true = "Anti-PD1",
+                             false = "IgG")) %>%
+  mutate(Gavage = fct_relevel(Gavage, c("Pre-BRB"))) %>%
+  ggplot(aes(x = days.from.injection, y = mean)) +
+  geom_line(aes(group = treatment.group,
+                color = Gavage,
+                linetype = Treatment), 
+            position = position_dodge(width = .5),
+            lwd = 1) + 
+  geom_point(aes(color = Gavage), 
+             position = position_dodge(width = .5))+
+  labs(x = "Days from Tumor Injection", 
+       y = expression("Tumor volume ("~mm^3~")"))  +
+  theme_bw(base_size = 18) +
+  scale_colour_manual(values = brewer.pal(5, "Set1")[5:6]) +
+  geom_errorbar(aes(ymin = lwr, 
+                    ymax = upr,
+                    color = Gavage),
+                width = 1,
+                position = position_dodge(width = .5),
+                lwd = 1)
+
+
+ggsave("../figures/tumorvolume_mimic13_lineplot.png", 
+       height = 4, width = 6)
 ```
 
