--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -35,7 +35,7 @@ tsize.files <- list.files("../data/tumor-size",
                           pattern = "AOT", 
                           full.names = TRUE,
                           recursive = TRUE)
-
+"../data/tumor-size/"
 tsize.files
 ```
 Filter any conflicting copy files, which have an appended computer ID starting with "CANCER".
@@ -432,6 +432,34 @@ mim21 <- tsize.raw[[grep("mimic21", names(tsize.raw))]] %>%
 
 ```
 
+## Mimic 22
+CMT167 cells (lung cancer) 85v1 vs 85v1+Blautia. This experiment replicates mimic18 and 19 using CMT167 cells.
+
+```{r}
+mim22 <- tsize.raw[[grep("mimic22", names(tsize.raw))]] %>%
+  drop_na(`tumor.length.(mm)`) %>%
+  mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
+         `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
+         `date` = as.character(`date`)) %>%
+  # Alter based on Treatment and gavage cages
+  mutate(Treatment = if_else(cage %in% c(1,2,3,4), 
+                             true = "Anti-PD1",
+                             false = "IgG"),
+         microbiome.sample = ifelse(cage %in% c(1,3,5,7), 
+                                    "HONC60-85v1", 
+                                    "HONC60-85v1+Blautia")) %>%
+  mutate(treatment.group = paste(Treatment, microbiome.sample, sep = " x "),
+         tail.number = paste(tail.number, cage, sep = " x ")) %>%
+  # filter(tail.number != "2 x 5") %>%
+  mutate(`tumor.width.(mm)` = ifelse(is.na(`tumor.width.(mm)`),0,`tumor.width.(mm)`)) %>%
+  # Change data to injection day
+  calcTumorVol(., as.POSIXct("2024-01-18")) %>%
+  separate(treatment.group, into = c("treatment", "microbiome.sample"), sep = " x ") %>%
+  mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
+         experiment = "mimic22") %>%
+  separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
+```
+
 
 ```{r}
 # mim16 <- 
@@ -484,7 +512,8 @@ mimic.cleaned <- mim1 %>%
   bind_rows(mim18) %>%
   bind_rows(mim19) %>%
   bind_rows(mim20) %>%
-  bind_rows(mim21)
+  bind_rows(mim21) %>%
+  bind_rows(mim22)
 ```
 
 # Save
